--- a/style.css
+++ b/style.css
@@ -257,6 +257,16 @@ button {
     .hero-text button {
         margin-right: 80px; 
     }
+
+    .image-cards {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .image-card {
+        margin-bottom: 20px;
+    }
+    
 }
 
 @media (min-width: 501px) and (max-width: 850px) {
