--- a/style.css
+++ b/style.css
@@ -217,6 +217,41 @@ button {
 
 /* FOOTER Bb */
 
+/* FOOTER */
+
+/* FOOTER */
+/* FOOTER */
+.footer {
+    background-image: url('footer.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    font-size: 12px;
+    padding: 50px 0;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start; /* Align items at the start */
+    flex-wrap: wrap; /* Allow items to wrap to next line */
+}
+
+.footer-item {
+    width: calc(25% - 20px); /* Adjust width as needed */
+    padding: 0 10px;
+    text-align: center;
+    margin-bottom: 20px; /* Adjust spacing between items */
+}
+
+.footer-item h2 {
+    font-size: 20px;
+    color: white;
+}
+
+.footer-item p {
+    color: white;
+}
+
 
 /* MEDIA QUERIES */
 
