--- a/style.css
+++ b/style.css
@@ -137,7 +137,6 @@
 
 /* LETS GO Jonas */
 
-/* LETS GO Jonas */
 .lets-go {
     background-image: url('background-image2.jpg');
     background-size: cover;
@@ -214,19 +213,60 @@ button {
 
 /* TITLE HERE Bb */
 
+.subscribe-section {
+    background-image: url('subscribe.png');
+    background-size: cover;
+    padding: 50px 0;
+    text-align: center;
+    color: white;
+}
+
+.subscribe-content h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+    color: white; 
+}
+
+.subscribe-content p {
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.search-container {
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+
+.search-container input[type="text"] {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    width: 50%;
+    margin-bottom: 30px;
+}
+
+.search-container button {
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    background-color: #666666;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-left: 10px; 
+    margin-bottom: 50px;
+}
 
 /* FOOTER Bb */
 
-/* FOOTER */
-
-/* FOOTER */
-/* FOOTER */
 .footer {
     background-image: url('footer.png');
     background-size: cover;
     background-repeat: no-repeat;
     font-size: 12px;
     padding: 50px 0;
+    margin-top: 40px;
 }
 
 .footer-content {
