--- a/style.css
+++ b/style.css
@@ -50,8 +50,9 @@
     padding: 8px;
     border-radius: 5px;
     border: none;
-    width: 60px;
+    width: 100px;
     background-color: #cdc6c2;
+    margin-right: 5px;
 }
 
 .search button {
@@ -59,6 +60,7 @@
     border: none;
     cursor: pointer;
     padding: 8px;
+    margin-left: -5px;
 }
 
 .search button img {
@@ -120,7 +122,7 @@
 .hero-text p {
     font-size: 18px;
     color: #777777;
-    margin-right: 3vh;
+    margin-right: 16vh;
 }
 
 .hero-text button {
@@ -170,11 +172,15 @@
     border-radius: 10px;
     padding: 10px;
     text-align: center;
+    height: 100%; /* Ensure all image cards have the same height */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Align content vertically */
 }
 
 .image-card img {
-    width: 100%;
-    border-radius: 5px;
+    max-width: 100%; /* Ensure image doesn't exceed container width */
+    height: auto; /* Maintain aspect ratio */
 }
 
 .image-card p {
@@ -183,6 +189,11 @@
     padding: 5px;
     border-radius: 5px;
     margin-top: 10px;
+    flex-grow: 1; /* Allow paragraph to grow and take remaining space */
+}
+
+.image-card.third-image img {
+    max-height: 141px;
 }
 
 .lets-go h1{
@@ -201,12 +212,98 @@ button {
 
 /* DISCOUNT Thomas */
 
+.discount {
+    display: flex;
+    align-items: flex-start;
+    background-color: rgb(129, 120, 113);
+    text-align: center;
+    margin-bottom: -5px;
+    
+}
+
+.discount-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 6em;
+    color: white;
+    font-size: 1.3em;
+    width: 50vw;
+}
+
+.discount-img  img {
+    width: 49.8vw;
+    height: fit-content;
+    object-fit: cover;
+    
+}
+
+.promo {
+    display: flex;
+    align-items: flex-start;
+    background-color: rgb(228, 183, 132);
+    text-align: center;
+    margin-bottom: -4px;
+}
+
+.promo-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 6em;
+    color: white;
+    font-size: 1.3em;
+}
+
+.promo-img  img {
+    width: 49vw;
+    height: 100%;
+    object-fit: cover;
+}
+
+button {
+
+    background-color: rgb(234, 168, 94);
+    color: white;
+    padding: 1em 2em;
+    margin: auto;
+    width: 15em;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: bold;
+    margin-top: 1em;
+    text-transform: uppercase;
+
+}
 
 /* HIKING IN THE MOUNTAIN Thomas */
 
+.hiking {
+    background-image: url('hikinginthemountains.png');
+    background-size: cover;
+    background-position: center; 
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-align: center;
+}
+
+.hiking-content {
+    padding: 15em;
+    font-size: 1.3em;
+
+} 
 
 /* EXPLORE THE WORLD Thomas */
 
+.explore  img {
+    max-width: 100%; 
+    height: auto; 
+}
 
 /* TEXT Bb */
 
@@ -341,7 +438,29 @@ button {
     .image-card {
         margin-bottom: 20px;
     }
-    
+
+    .explore  img {
+        max-width: 100%;
+        height: 300px;
+    } 
+
+    .search-container input[type="text"] {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .search-container button {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .hiking {
+        max-height: 300px;
+    } 
+
+    .hiking-content {
+        font-size: 0.6rem;
+    }
 }
 
 @media (min-width: 501px) and (max-width: 850px) {
